--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,25 @@
       <artifactId>spring-jdbc</artifactId>
       <version>4.3.3.RELEASE</version>
     </dependency>
-  </dependencies>
+    <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.1.7</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-core -->
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-core</artifactId>
+      <version>1.1.7</version>
+    </dependency>
+    <dependency>
+      <groupId>org.logback-extensions</groupId>
+      <artifactId>logback-ext-spring</artifactId>
+      <version>0.1.2</version>
+      <scope>compile</scope>
+    </dependency>
+</dependencies>
   <build>
     <finalName>com.caimao</finalName>
   </build>
